# math_app

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
lib/: CMakeLists.txt
